backend/tests/corpus/shadowing-pos-001.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  labels:
    cape-test-case: shadowing-pos-001
    owner-team: team-delta
  name: img-policy-shadowing-pos-001
spec:
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    namespaces:
    - shadow-ns-shadowing-pos-001-0
  parameters:
    repos:
    - mycompany.com/
